# mogadishu

./: Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: docker.yml  python.yml  rust.yml
bioreactor/: README.md  bioreactor_demo.py  main.py
docker/: Dockerfile.dev  dev-config.toml
docs/: dashboard.md  mogadishu.tex
docs/foundation/: genome-theory.tex  intracellular-dynamics.tex  membrane-theory.tex
examples/: dashboard_demo.ps1
examples/python/: s_entropy_demo.py
scripts/: build.ps1  setup-python.ps1  test.ps1
src/: config.rs  error.rs  lib.rs
src/bioreactor/: mod.rs
src/bioreactor/validation/: README.md  __init__.py  cellular_validation.py  demo_validation.py  evidence_validation.py  integration_validation.py  oscillatory_validation.py  s_entropy_validation.py  validation_framework.py  virtual_cell_validation.py
src/cellular/: mod.rs
src/miraculous/: mod.rs
src/s_entropy/: mod.rs
src/simulator/: circuit_model.rs  fuzzy_controller.rs  laplace_analyzer.rs  linear_optimizer.rs  mod.rs  stability_analysis.rs
src/visualization/: dashboard.rs  mermaid.rs  mod.rs  process_state.rs
