[package]
name = "mogadishu"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "S-Entropy Framework for Revolutionary Bioreactor Modeling Through Observer-Process Integration"
license = "MIT"
repository = "https://github.com/fullscreen-triangle/mogadishu"
keywords = ["bioreactor", "s-entropy", "cellular", "bayesian", "quantum"]
categories = ["science", "simulation", "mathematics"]

[dependencies]
# Core mathematical libraries
nalgebra = "0.33"
ndarray = "0.16" 
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"

# Numerical computation
ode_solvers = "0.4"
roots = "0.0.8"
statrs = "0.17"

# Parallel computing
rayon = "1.8"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Logging and error handling
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

# Time and measurement
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"

[lib]
name = "mogadishu"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mogadishu-cli"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[[bench]]
name = "s_entropy_benchmarks"
harness = false

[features]
default = ["oxygen-enhanced", "quantum-transport", "atp-constraints"]

# S-Entropy Framework Features
s-entropy-core = []
observer-insertion = []
precision-by-difference = []

# Cellular Architecture Features  
atp-constraints = []
membrane-quantum = []
dna-consultation = []
oxygen-enhanced = []
electron-cascade = []

# Miraculous Dynamics Features
tri-dimensional-de = []
impossibility-elimination = []
reverse-causality = []

# Integration Features
python-bindings = ["pyo3"]
hardware-coupling = []
quantum-transport = []

# Performance Features
simd = []
gpu-acceleration = []
